# sunva-ai

./: .gitignore  README.md  client.py  index.html  main.py  pyproject.toml  requirements.txt  requirements_non_conda.txt
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
core/ai/: speech.py  text.py
core/api/: language.py  stt.py  tts.py  user.py
core/db/: database.py  init_db.py  redis_client.py
core/llm/: claude_client.py  groq_client.py  llm.py  openai_client.py
core/models/: db.py  instructor.py  stt.py  tts.py  user.py
core/stt/: bodhi_client.py  groq_client.py  malayalam_client.py  stt.py
core/tts/: ai4bharat_client.py  bhashini_api.py  coqui_client.py  tts.py
core/utils/: convert_utils.py  executor_utils.py  instructor_utils.py  jwt_utils.py  speech_utils.py
docs/: README.md
ops/: .env
prompts/: concise.txt  correction.txt  decision.txt  highlight.txt
static/: index.html
streamlit/: app.py  audio_history.json  requirements.txt
